--- a/ox_jekyll_setup/sample.org
+++ b/ox_jekyll_setup/sample.org
@@ -1,3 +1,4 @@
+#+STARTUP: content
 #+OPTIONS: H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:nil -:t f:nil *:t <:t
 #+OPTIONS: TeX:t LaTeX:t skip:nil d:nil todo:t pri:nil tags:not-in-toc
 #+OPTIONS: author:nil
